:sparkles: Create swagger for the CRUD route of user
